# virtual-tryon

./: .gitignore  CMakeLists.txt  README.md  calibration.cpp  calibration.json  calibrationSaved1.json  calibration_best_shirt.json  calibration_saved1.json  pose_tracker.py  pose_tracker_model.py  requirements.txt  requirements_oscar.txt
calibrations/: calibration_basic_sweatshirt.json  calibration_cute_blazer_with_bears_with_bones.json  calibration_denim_shirt_-_hellbrush__viacheslav_nikulaichev.json  calibration_fleece_jacket.json  calibration_jeans_denim_jacket.json  calibration_shirt_2.json  calibration_t-shirt.json  calibration_tshirt_shortSleeve.json
gesture-swipe/: dataset.py  model.py  requirements.txt  run.slurm  save_dataset.py  train.py  utils.py
meshes/: cute_blazer_with_bears_with_bones.glb  fleece_jacket.glb  shirt_2.glb
oscar/: download_job.sh  download_surreal.sh  keep_alive.sh  preprocess_job.sh  setup_oscar.sh  train_job.sh  train_job_subsample.sh
oscar/files/: README.md
src/: calibration.json  main.cpp  mesh.cpp  mesh.h  pose_tracker.cpp  pose_tracker.h  utils.cpp  utils.h
train/: dataset.py  model.py  plot_learning_curves.py  preprocess.py  train.py  train_subsample.py
